User Update Busines Profile page

--- a/template/profile.html
+++ b/template/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>LandingPage</title>
   <meta charset="utf-8">
@@ -8,110 +9,117 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-social.css">
   <link href="assets/css/font-awesome.css" rel="stylesheet">
-  
-</head>
-<body>
-    <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a href="index.html"><img src="images/img7.png" class="navbar-brand img-responsive"height="50" width="50"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navul navbar-nav">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="signUpIn.html">SignIn/SignUp <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="register.html">Register</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="profile.html">Reviews</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Business Catalog</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="update.html">Update Profile</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
-    </header>
-    <div class="container" style="padding-left: 0; margin-top: 5%;">
-        <div class="row" style="padding-left: 0;">
-                <div class="card col-md-3 offset-md-1" style="margin-right: 5%;">
-                        <img class="card-img-top" src="images/2.png" alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Review</h5>
-                          <p class="card-text">Really cool business opportunity.</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">Business Name: Kontina Media</li>
-                          <li class="list-group-item">Category: Media Services</li>
-                          <li class="list-group-item">Location: Jos</li>
-                        </ul>
-                      </div>
 
-                      <div class="card col-md-3" style="margin-right: 5%;">
-                            <img class="card-img-top" src="images/2.png" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title">Review</h5>
-                              <p class="card-text">Wow! You should try them out some time, they are cool.</p>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                              <li class="list-group-item">Business Name: EkunTravels</li>
-                              <li class="list-group-item">Category: Travel Consultancy</li>
-                              <li class="list-group-item">Location: Akure</li>
-                            </ul>
-                          </div>
-                          
-                          <div class="card col-md-3" style="margin-right: 5%;">
-                                <img class="card-img-top" src="images/2.png" alt="Card image cap">
-                                <div class="card-body">
-                                  <h5 class="card-title">Review</h5>
-                                  <p class="card-text">The best of the best opportunity in town. Love it loads!.</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                  <li class="list-group-item">Business Name: Ojuepa and Sons</li>
-                                  <li class="list-group-item">Category: Hospitality</li>
-                                  <li class="list-group-item">Location: Lagos </li>
-                                </ul>
-                              </div>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="index.html">
+        <img src="images/img7.png" class="navbar-brand img-responsive" height="50" width="50">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navul navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="signUpIn.html">SignIn/SignUp
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="register.html">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="profile.html">Reviews</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Business Catalog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="update.html">Update Profile</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="container" style="padding-left: 0; margin-top: 5%;">
+    <div class="row" style="padding-left: 0;">
+      <div class="card col-md-3 offset-md-1" style="margin-right: 5%;">
+        <img class="card-img-top" src="images/a.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Review</h5>
+          <p class="card-text">Really cool business opportunity.</p>
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Business Name: Kontina Media</li>
+          <li class="list-group-item">Category: Media Services</li>
+          <li class="list-group-item">Location: Jos</li>
+        </ul>
+      </div>
+
+      <div class="card col-md-3" style="margin-right: 5%;">
+        <img class="card-img-top" src="images/b.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Review</h5>
+          <p class="card-text">Wow! You should try them out some time, they are cool.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Business Name: EkunTravels</li>
+          <li class="list-group-item">Category: Travel Consultancy</li>
+          <li class="list-group-item">Location: Akure</li>
+        </ul>
+      </div>
+
+      <div class="card col-md-3" style="margin-right: 5%;">
+        <img class="card-img-top" src="images/c.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Review</h5>
+          <p class="card-text">The best of the best opportunity in town. Love it loads!.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Business Name: Ojuepa and Sons</li>
+          <li class="list-group-item">Category: Hospitality</li>
+          <li class="list-group-item">Location: Lagos </li>
+        </ul>
+      </div>
     </div>
-    
-    <footer style="bottom:0; display:flex; min-width:100%; background:black;">
-            <div class="row" style="min-width:100%;">
-                <div class="col-md-5">
-                        <p class="text-center" style="color:white;">&copy2018</p>
-                </div>
-                    <div class="col-md-4 btn-soc">
-                        <a class="btn btn-social-icon btn-twitter">
-                                <span class="fa fa-twitter"></span>
-                        </a>
-                        <a class="btn btn-social-icon btn-facebook">
-                                <span class="fa fa-facebook"></span>
-                        </a>
-                        <a class="btn btn-social-icon btn-instagram">
-                                <span class="fa fa-instagram"></span>
-                        </a>
-                        <a class="btn btn-social-icon btn-linkdin">
-                                <span class="fa fa-linkedin"></span>
-                        </a>
-                </div>
-                    
-            </div>
-                
-            
-                
-        </footer>
-    <script src="js/jquery.min.js"></script>
-    <script>
-        $(function(){
-            $('.carousel').carousel()
-        })
-    </script>
-    <script src="js/bootstrap.min.js"></script>
-    </body>
-    </html>
+  </div>
+
+  <footer style="bottom:0; display:flex; min-width:100%; background:black;">
+    <div class="row" style="min-width:100%;">
+      <div class="col-md-5">
+        <p class="text-center" style="color:white;">&copy2018</p>
+      </div>
+      <div class="col-md-4 btn-soc">
+        <a class="btn btn-social-icon btn-twitter">
+          <span class="fa fa-twitter"></span>
+        </a>
+        <a class="btn btn-social-icon btn-facebook">
+          <span class="fa fa-facebook"></span>
+        </a>
+        <a class="btn btn-social-icon btn-instagram">
+          <span class="fa fa-instagram"></span>
+        </a>
+        <a class="btn btn-social-icon btn-linkdin">
+          <span class="fa fa-linkedin"></span>
+        </a>
+      </div>
+
+    </div>
+
+
+
+  </footer>
+  <script src="js/jquery.min.js"></script>
+  <script>
+    $(function () {
+      $('.carousel').carousel()
+    })
+  </script>
+  <script src="js/bootstrap.min.js"></script>
+</body>
+
+</html>
