add cards to reflect review

--- a/template/profile.html
+++ b/template/profile.html
@@ -79,6 +79,9 @@
                                 </ul>
                               </div>
         </div>
+        <div class='container'>
+          <textarea class='col-md-6 offset-md-3'placeholder='Your review goes in here'rows='3'></Textarea>>
+        </div>
     </div>
     
     <footer style="bottom:0; display:flex; min-width:100%; background:black;">
